minimap et camera sur 2 axes et inertie

--- a/angular.json
+++ b/angular.json
@@ -132,5 +132,10 @@
       }
     }
   },
-  "defaultProject": "CityGen"
+  "defaultProject": "CityGen",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
